# python-template

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose-example.yml  pyproject.toml  requirements.txt
python_template/: config.py  log_config.py
